hard-gists/6327611/run.log
=== Docker Run Log for 6327611 ===
Started at: Mi 29. Okt 16:28:23 CET 2025

[2025-10-29 16:28:23] START: Running container for 6327611
[2025-10-29 16:28:23] SUCCESS: Container a1d9903265289e8e1f2bd6146a2b55610fe459be03d59b548be0ae482f3c7843 started for 6327611
=== Container logs for 6327611 ===
  File "/snippet.py", line 51
    print source.format
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6327611 ===
[2025-10-29 16:28:25] INFO: Container a1d9903265289e8e1f2bd6146a2b55610fe459be03d59b548be0ae482f3c7843 has stopped
